Fix compile and update spring version to 2.2.5